Update atom stuff so that it is in line with the latest svelte atom

--- a/harness/templates.html
+++ b/harness/templates.html
@@ -191,9 +191,11 @@
   <body>
     <div class="atoms">
       <h2>Templates</h2>
-      <a href="./dcr-interactive__inline/">Interactive DCR (inline)</a>
-      <a href="./dcr-interactive__showcase/">Interactive DCR (showcase)</a>
-      <a href="./dcr-interactive__immersive/">Interactive DCR (immersive)</a>
+      <a href="./live">Live</a>
+      <a href="./dcr-interactive__inline/">Interactive DCAR - inline (Web)</a>
+      <a href="./dcr-interactive__showcase/">Interactive DCAR - showcase (Web)</a>
+      <a href="./dcr-interactive__immersive/">Interactive DCAR - immersive (Web)</a>
+      <a href="./dcr-interactive__immersive__apps/">Interactive DCAR - immersive (Apps)</a>
       <a href="./article/">Article</a>
     </div>
   </body>
